--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -3,6 +3,11 @@ pipeline{
     environment {
         // Set Node.js environment for the frontend
         NODE_HOME = tool name: 'NodeJS', type: 'NodeJS'
+        DB_HOST = credentials('DB_HOST')  // Fetch from Jenkins Credentials
+        DB_USER = credentials('DB_USER')
+        DB_PASSWORD = credentials('DB_PASSWORD')
+        DB_NAME = credentials('DB_NAME')
+        DB_PORT = credentials('DB_PORT')
     }
     stages {
         stage('clean workspace'){
