--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -1,16 +1,16 @@
-pipeline{
+pipeline {
     agent any
-    //  tools{
+    // tools{
     //     nodejs 'node18'
     // }
     stages {
-        stage('clean workspace'){
-            steps{
+        stage('clean workspace') {
+            steps {
                 cleanWs()
             }
         }
-        stage('Checkout from Git'){
-            steps{
+        stage('Checkout from Git') {
+            steps {
                 git branch: 'main', url: 'https://github.com/Lutfar1996/FullStackRepo.git'
             }
         }
@@ -24,19 +24,20 @@ pipeline{
                 }
             }
         }
-        stage("Docker Build & Push"){
-            steps{
-                script{
-                   withDockerRegistry([credentialsId: 'docker', toolName: 'docker'])
-                   dir('frontend'){   
-                       sh "docker build -t loginapp ."
-                       sh "docker tag loginapp lutfar1996/loginapp:latest "
-                       sh "docker push lutfar1996/loginapp:latest "
-                       sh "docker "
+        stage('Docker Build & Push') {
+            steps {
+                script {
+                    // Provide Docker registry credentials and ensure it's wrapped in a block
+                    withDockerRegistry([credentialsId: 'docker', url: 'https://index.docker.io/v1/']) {
+                        dir('frontend') {
+                            // Build Docker image, tag it, and push to Docker Hub
+                            sh "docker build -t loginapp ."
+                            sh "docker tag loginapp lutfar1996/loginapp:latest"
+                            sh "docker push lutfar1996/loginapp:latest"
+                        }
                     }
                 }
             }
         }
-       
     }
 }
