--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -30,10 +30,9 @@ pipeline {
                     // Provide Docker registry credentials and ensure it's wrapped in a block
                     withDockerRegistry([credentialsId: 'docker', url: 'https://index.docker.io/v1/']) {
                         dir('backend') {
-                            // Build Docker image, tag it, and push to Docker Hub
-                            sh "docker build -t loginappbackend ."
-                            sh "docker tag loginappbackend lutfar1996/loginappbackend:latest"
-                            sh "docker push lutfar1996/loginappbackend:latest"
+                            def imageTag = "lutfar1996/backend:${BUILD_NUMBER}"  // Tag the image with the build number
+                            sh "docker build -t ${imageTag} ."
+                            sh "docker push ${imageTag}"
                         }
                     }
                 }
