--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -30,10 +30,10 @@ pipeline {
                     // Provide Docker registry credentials and ensure it's wrapped in a block
                     withDockerRegistry([credentialsId: 'docker', url: 'https://index.docker.io/v1/']) {
                         dir('frontend') {
-                            // Build Docker image, tag it, and push to Docker Hub
-                            sh "docker build -t loginapp ."
-                            sh "docker tag loginapp lutfar1996/loginapp:latest"
-                            sh "docker push lutfar1996/loginapp:latest"
+                            // Build Docker image, tag it using Jenkins build number, and push to Docker Hub
+                            def imageTag = "lutfar1996/frontend:${BUILD_NUMBER}"  // Tag the image with the build number
+                            sh "docker build -t ${imageTag} ."
+                            sh "docker push ${imageTag}"  // Push the tagged image
                         }
                     }
                 }
