--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -1,7 +1,9 @@
 pipeline {
     agent any
-    tools{
-        nodejs 'node18'
+    environment {
+        AWS_REGION = 'ap-northeast-1'
+        CLUSTER_NAME = 'EKS_CLOUD'
+        BACKEND_IMAGE = "lutfar1996/backend:${BUILD_NUMBER}"  // Set the backend image tag dynamically
     }
     stages {
         stage('clean workspace') {
@@ -18,7 +20,7 @@ pipeline {
             steps {
                 script {
                     // Ensure you're in the directory where package.json exists
-                    dir('backend') {  // Replace with the correct directory path
+                    dir('backend') {
                         sh 'npm install'
                     }
                 }
@@ -30,11 +32,31 @@ pipeline {
                     // Provide Docker registry credentials and ensure it's wrapped in a block
                     withDockerRegistry([credentialsId: 'docker', url: 'https://index.docker.io/v1/']) {
                         dir('backend') {
-                            def imageTag = "lutfar1996/backend:${BUILD_NUMBER}"  // Tag the image with the build number
-                            sh "docker build -t ${imageTag} ."
-                            sh "docker push ${imageTag}"
+                            // Build Docker image, tag it using Jenkins build number, and push to Docker Hub
+                            sh "docker build -t ${BACKEND_IMAGE} ."
+                            sh "docker push ${BACKEND_IMAGE}"  // Push the tagged image
                         }
                     }
+                }
+            }
+        }
+        stage('Update Kubeconfig for EKS') {
+            steps {
+                script {
+                    withAWS(credentials: 'aws-credentials') {
+                        // Update the kubeconfig to point to the correct EKS cluster
+                        sh "aws eks --region ${AWS_REGION} update-kubeconfig --name ${CLUSTER_NAME}"
+                    }
+                }
+            }
+        }
+        stage('Deploy to EKS') {
+            steps {
+                script {
+                    // Replace image tag in the backend manifest file with the Jenkins build number
+                    sh "sed -i 's|lutfar1996/backend:latest|${BACKEND_IMAGE}|g' backend-deployment.yaml"
+                    // Apply the updated deployment YAML file to the EKS cluster
+                    sh "kubectl apply -f backend-deployment.yaml"
                 }
             }
         }
