--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: frontend
           image: lutfar1996/frontend:22
+          env:
+            - name: REACT_APP_BACKEND_URL
+              value: "backend-service:5001" # assuming backend service is on port 8080
           ports:
             - containerPort: 5000
 ---
