--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     // environment {
     //     AWS_REGION = 'ap-northeast-1'
     //     CLUSTER_NAME = 'EKS_CLOUD'
-    //     FRONTEND_IMAGE = "lutfar1996/frontend:${BUILD_NUMBER}"  // Set the frontend image tag dynamically
+        FRONTEND_IMAGE = "lutfar1996/frontend:${BUILD_NUMBER}"  // Set the frontend image tag dynamically
     // }
     stages {
         stage('clean workspace') {
